# ToySimulatorRobot

./: .gitignore  README.md  pyproject.toml
.obsidian/: workspace.json
Docs/: Architecture and Overall Planning.md  Development and Build tools.md
Docs/Version 0.1.0/: TASK-1 Python installation and setting up new project.md  TASK-2 Architecture planning.md  TASK-3 Implement a logger.md  TASK-4 Defining a generic parsing method and logging the results into the console.md  TASK-5 implementing commands and validation.md
src/: Face.py  Map.py  Region.py  Robot.py  RobotProvider.py  main.py
src/Commands/: AbstractCommand.py  CommandParser.py  LeftCommand.py  MoveCommand.py  PlaceCommand.py  ReportCommand.py  RightCommand.py
src/Examples/: ExampleFailingPath.txt  ExampleFailingPath_IncorrectPlace.txt  ExampleFailingPath_MutliPlace.txt
src/Utilities/: DirectionHelper.py  log.py
tests/: TryingAllCommands.txt  test_Region.py  test_Robot.py  test_RobotProvider.py  test_main.py  test_map.py
tests/Commands/: test_CommandParser.py  test_MoveCommand.py  test_PlaceCommand.py
tests/Utilities/: test_DirectionHelper.py  test_Face.py  test_Log_provider.py
